# agent-governance

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/adr/: 0001-design.md  0002-audit-cli.md
docs/demo/: audit-clinical-mcp-server.md  audit-oc-realestate-intel.md
src/agent_governance/: __init__.py  checks.py  node.py  observability.py  sinks.py
src/agent_governance/audit/: __init__.py  cli.py  report.py  rules.py  scanner.py
tests/: test_audit.py  test_checks.py  test_node.py  test_sinks.py
