[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-governance"
version = "0.1.0"
description = "Policy-enforcement node + incident reporting for LLM agents. Drop-in for LangGraph; framework-agnostic otherwise."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Danh Le", email = "nightseek@yahoo.com" }]
keywords = ["llm", "agent", "governance", "guardrails", "langgraph", "observability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/odanree/agent-governance"
Repository = "https://github.com/odanree/agent-governance"
Issues = "https://github.com/odanree/agent-governance/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_governance"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
